Done login and menu

--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.librarymanagement/com.example.librarymanagement.HelloApplication
+                            <mainClass>com.example.librarymanagement/com.example.librarymanagement.LibraryManagementApplication
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
